--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                </div>
                <div class="banner-image col-md-6">
                 <div class="image-container">
-                    <img src="./images/rings.jpg" alt="">
+                    <img src="./images/Rectangle 25.png" alt="">
                 </div>
               </div>
 
@@ -102,7 +102,7 @@
             <div class="row">
 
                 <div class="about-image col-md-6">
-                    <img src="./images/project 3.jpg" alt="">
+                    <img src="./images/Rectangle 16.png" alt="">
                    
 
                     <div class="toonn"> <div class="btn9">See more</div></div>
